sanity check: run pa11y!

--- a/static/invitation.html
+++ b/static/invitation.html
@@ -1,4 +1,19 @@
-<h2>You have been invited</h2>
-
-<p>You have been invited to create a user on {{ .SiteURL }}. Follow this link to accept the invite:</p>
-<p><a href="{{ .ConfirmationURL }}">Accept the invite</a></p>
+<h1>
+  Hi there!
+</h1>
+<h2>
+  Thanks for registering for Furnal Equinox 2021: Pixel Purrfect!
+</h2>
+<p>
+  We would like to invite you to make an account on our web platform for the convention!
+  <br />
+  Follow this link to accept the invite:
+</p>
+<p>
+  <a title="Invitation link" href="{{ .ConfirmationURL }}">
+    Let's go!
+  </a>
+</p>
+<p>
+  Please keep your password somewhere safe! If you lose it, the only thing we can do it reset your password!
+</p>
