prevent DB from incrementing total donor count if donor hasn't donated anything

--- a/static/invitation.html
+++ b/static/invitation.html
@@ -7,7 +7,7 @@
 <p>
   We would like to invite you to make an account on our web platform for the convention!
   <br />
-  Follow this link to accept the invite:
+  Follow this link to accept your invitation:
 </p>
 <p>
   <a title="Invitation link" href="{{ .ConfirmationURL }}">
@@ -15,5 +15,5 @@
   </a>
 </p>
 <p>
-  Please keep your password somewhere safe! If you lose it, the only thing we can do it reset your password!
+  Please keep your password somewhere safe! If you lose it, all we can do is reset your password!
 </p>
